# telemetry-monitoring

./: .gitignore  AI_INTERACTION_LOG.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  schema.sql  simulate.py
backend/app/: main.py
backend/app/core/: config.py  db.py  domain.py  zones.py
backend/app/features/anomalies/: queries.py  router.py  schemas.py  staleness.py
backend/app/features/fleet/: queries.py  router.py
backend/app/features/telemetry/: anomaly_rules.py  ingest.py  queries.py  router.py  schemas.py
backend/app/features/vehicles/: __init__.py  list_vehicles.py  queries.py  router.py  schemas.py  status_update.py
backend/app/features/zones/: queries.py  router.py
backend/fleet_telemetry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_anomaly_rules.py  test_fault_transition.py  test_ingest.py  test_read_endpoints.py  test_zone_counter_concurrency.py
docs/: README.md  ai-driven-sdlc.md  api-contract.md  architecture.md  concurrency-and-isolation.md  running-locally.md
docs/adr/: 0001-fleet-telemetry-architecture.md
docs/diagrams/: 01-system-context.md  02-data-model-er.md  03-flow-telemetry-ingest.md  04-flow-fault-transition.md  05-flow-zone-counter.md  README.md
docs/superpowers/plans/: 2026-06-14-backend.md  2026-06-14-frontend.md  2026-06-15-code-smell-remediation.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: dashboard.spec.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  (+1 more)
(+32 files in other folders)
